--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@serverless-stack/cli": "^1.2.22",
     "@serverless-stack/resources": "^1.2.22",
     "@tsconfig/node16": "^1.0.3",
-    "aws-cdk-lib": "^2.24.0",
+    "aws-cdk-lib": "2.24.0",
     "typescript": "^4.7.3",
     "vitest": "^0.15.0"
   },
